# BravoFinder_V2

./: .gitignore  Dockerfile  README.md
Web/: BfDataset.hpp  CMakeLists.txt  bfhandler.hpp  main.cpp
